--- a/client/public/index.html
+++ b/client/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>React Hooks</title>
   </head>
-  <body>
+  <body class="theme-light bg-page">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
